--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,67 @@
-asn1crypto==1.2.0
-bottle==0.12.17
+asgiref==3.2.5
+asn1crypto==1.3.0
+bottle==0.12.18
 certifi==2019.11.28
-cffi==1.13.2
+cffi==1.14.0
 chardet==3.0.4
 CodeConvert==3.0.2
 cryptography==2.8
 defusedxml==0.6.0
 diff-match-patch==20181111
-Django==2.2.7
-django-admin==2.0.0
+Django==2.2.11
+django-admin==2.0.1
 django-appconf==1.0.3
-django-ckeditor==5.8.0
-django-compressor==2.3
-django-debug-toolbar==2.1
-django-excel-response2==2.0.8
+django-ckeditor==5.9.0
+django-compressor==2.4
+django-debug-toolbar==2.2
+django-excel-base==1.0.3
+django-excel-response2==3.0.1
 django-haystack==2.8.1
-django-import-export==1.2.0
+django-import-export==2.0.2
 django-js-asset==1.2.2
 django-models-ext==1.1.9
 django-pagedown==2.0.3
-django-six==1.0.4
 django-suit==0.2.28
-django-uuslug==1.1.9
+django-uuslug==1.2.0
 et-xmlfile==1.0.1
 furl==2.1.0
 http1==1.0.1
-idna==2.8
+idna==2.9
 jdcal==1.4.1
-jieba==0.39
-jsonpickle==1.2
+jieba==0.42.1
+jsonpickle==1.3
 MarkupPy==1.14
 mistune==0.8.4
-odfpy==1.4.0
-openpyxl==3.0.2
+mysqlclient==1.4.6
+odfpy==1.4.1
+openpyxl==3.0.3
 orderedmultidict==1.0.1
-Pillow==6.2.1
-pycparser==2.19
-Pygments==2.5.1
-PyMySQL==0.9.3
+Pillow==7.0.0
+pycparser==2.20
+Pygments==2.6.1
 python-dateutil==2.8.1
 python-slugify==4.0.0
 python3-memcached==1.51
 pytz==2019.3
-PyYAML==5.1.2
+PyYAML==5.3.1
 raven==6.10.0
 rcssmin==1.0.6
-requests==2.22.0
+requests==2.23.0
 rjsmin==1.1.0
 screen==1.0.1
-shortuuid==0.5.0
-six==1.13.0
-sqlparse==0.3.0
-tablib==0.14.0
+shortuuid==1.0.1
+six==1.14.0
+sqlparse==0.3.1
+tablib==1.1.0
 text-unidecode==1.3
-TimeConvert==1.5.0
+TimeConvert==1.5.1
 tzlocal==2.0.0
 unicodecsv==0.14.1
 Unidecode==1.1.1
 upgrade-requirements==1.7.0
-urllib3==1.25.7
+urllib3==1.25.8
 virtualenv==16.7.8
-WeRoBot==1.10.1
+WeRoBot==1.12.0
 Whoosh==2.7.4
 xlrd==1.2.0
 xlwt==1.3.0
